--- a/Technical Documentation Page.html
+++ b/Technical Documentation Page.html
@@ -4,23 +4,32 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link rel="stylesheet" href="Technical Documentation Page.css">
       <title>Technical Documentation Page</title>
    </head>
    <body>
-      <div class="jsDocumentationHeaders">
-         <div class="firstHeader">
-            <h1>JS Documentation</h1>
-         </div>
-         <div class="subHeaders">
-         </div>
+      <div class="header_text">
+         <h1>JS Documentation</h1>
       </div>
+      <div class="navLinks">
+         <nav id="navbar">
+         <a href="#Introduction">Introduction</a>
+         <a href="#What_you_should_already_know">What you should already now</a>
+         <a href="#Javascript_and_java">JavaScript and Java</a>
+         <a href="#Hello_world">Hello world</a>
+         <a href="#Variables">Variables</a>
+      </nav>
+   </div>
+      <div class="right_side">
       <div id="main-doc">
          <section class="main-section">
+            <section id="Introduction">
             <h2>Introduction</h2>
             <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight
                language. Inside a host environment (for example, a web browser), JavaScript can be connected to the
-               objects of its environment to provide programmatic control over them.
-               JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of
+               objects of its environment to provide programmatic control over them.</p>
+
+               <p>JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of
                language elements such as operators, control structures, and statements. Core JavaScript can be extended
                for a variety of purposes by supplementing it with additional objects; for example:
             </p>
@@ -30,6 +39,7 @@
                   elements on an HTML form and respond to user events such as mouse clicks, form input, and page
                   navigation.
                </li>
+               <br>
                <li>Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript
                   on a server. For example, server-side extensions allow an application to communicate with a
                   database, provide continuity of information from one invocation to another of the application, or
@@ -37,20 +47,27 @@
                </li>
             </ul>
          </section>
+      </section>
          <section class="main-section">
+            <section id="What_you_should_already_know">
             <h2>What you should already know</h2>
             <p>This guide assumes you have the following basic background:</p>
             <ul>
                <li>A general understanding of the Internet and the World Wide Web (WWW).
                </li>
+               <br>
                <li>Good working knowledge of HyperText Markup Language (HTML).
                </li>
+               <br>
                <li>Some programming experience. If you are new to programming, try one of the tutorials linked on the
                   main page about JavaScript.
                </li>
+               <br>
             </ul>
          </section>
+         </section>
          <section class="main-section">
+            <section id="Javascript_and_java">
             <h2>JavaScript and Java</h2>
             <p>JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript
                language resembles Java but does not have Java's static typing and strong type checking. JavaScript
@@ -70,8 +87,10 @@
                are not explicitly typed.
             </p>
          </section>
+         </section>
          <section class="main-section">
-            <h2>Hello world cmere to me</h2>
+            <section id="Hello_world">
+            <h2>Hello world</h2>
             <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript
                code:
             </p>
@@ -84,13 +103,17 @@
                </p>
             </div>
          </section>
+         </section>
          <section class="main-section">
+            <section id="Variables">
             <h2>Variables</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates a nisi quaerat quam quia, animi
                error fugiat corporis ipsam corrupti, iusto repellendus minima aspernatur! Nostrum doloribus incidunt
                modi quisquam reiciendis!
             </p>
          </section>
+         </section>
       </div>
+   </div>
    </body>
 </html>
