Adding border and styling to nav bar on the left

--- a/Technical Documentation Page.html
+++ b/Technical Documentation Page.html
@@ -8,6 +8,7 @@
       <title>Technical Documentation Page</title>
    </head>
    <body>
+      <div class="left_side">
       <div class="header_text">
          <h1>JS Documentation</h1>
       </div>
@@ -20,6 +21,7 @@
          <a href="#Variables">Variables</a>
       </nav>
    </div>
+</div>
       <div class="right_side">
       <div id="main-doc">
          <section class="main-section">
