--- a/Technical Documentation Page.html
+++ b/Technical Documentation Page.html
@@ -26,7 +26,7 @@
       <div id="main-doc">
          <section class="main-section">
             <section id="Introduction">
-            <h2>Introduction</h2>
+            <h2>Introduction this is a test</h2>
             <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight
                language. Inside a host environment (for example, a web browser), JavaScript can be connected to the
                objects of its environment to provide programmatic control over them.</p>
