Styling Left Nav Bar, p and li elements

--- a/Technical Documentation Page.html
+++ b/Technical Documentation Page.html
@@ -10,15 +10,21 @@
    <body>
       <div class="left_side">
       <div class="header_text">
-         <h1>JS Documentation</h1>
+         <p class="jsDocumentation">JS Documentation</p>
       </div>
       <div class="navLinks">
+         <hr class="HrNav">
          <nav id="navbar">
          <a href="#Introduction">Introduction</a>
+         <hr class="HrNav">
          <a href="#What_you_should_already_know">What you should already now</a>
+         <hr class="HrNav">
          <a href="#Javascript_and_java">JavaScript and Java</a>
+         <hr class="HrNav">
          <a href="#Hello_world">Hello world</a>
+         <hr class="HrNav">
          <a href="#Variables">Variables</a>
+         <hr class="HrNav">
       </nav>
    </div>
 </div>
@@ -26,15 +32,17 @@
       <div id="main-doc">
          <section class="main-section">
             <section id="Introduction">
-            <h2>Introduction this is a test</h2>
+            <h2>Introduction </h2>
             <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight
                language. Inside a host environment (for example, a web browser), JavaScript can be connected to the
                objects of its environment to provide programmatic control over them.</p>
+               <br>
 
                <p>JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of
                language elements such as operators, control structures, and statements. Core JavaScript can be extended
                for a variety of purposes by supplementing it with additional objects; for example:
             </p>
+            <br>
             <ul>
                <li>Client-side JavaScript extends the core language by supplying objects to control a browser and its
                   Document Object Model (DOM). For example, client-side extensions allow an application to place
@@ -54,6 +62,7 @@
             <section id="What_you_should_already_know">
             <h2>What you should already know</h2>
             <p>This guide assumes you have the following basic background:</p>
+            <br>
             <ul>
                <li>A general understanding of the Internet and the World Wide Web (WWW).
                </li>
@@ -76,6 +85,7 @@
                follows most Java expression syntax, naming conventions and basic control-flow constructs which was the
                reason why it was renamed from LiveScript to JavaScript.
             </p>
+            <br>
             <p>In contrast to Java's compile-time system of classes built by declarations, JavaScript supports a runtime
                system based on a small number of data types representing numeric, Boolean, and string values.
                JavaScript has a prototype-based object model instead of the more common class-based object model. The
@@ -83,11 +93,13 @@
                objects. JavaScript also supports functions without any special declarative requirements. Functions can
                be properties of objects, executing as loosely typed methods.
             </p>
+            <br>
             <p>JavaScript is a very free-form language compared to Java. You do not have to declare all variables,
                classes, and methods. You do not have to be concerned with whether methods are public, private, or
                protected, and you do not have to implement interfaces. Variables, parameters, and function return types
                are not explicitly typed.
             </p>
+            
          </section>
          </section>
          <section class="main-section">
@@ -96,6 +108,7 @@
             <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript
                code:
             </p>
+            <br>
             <div class="jsCode">
                <p>
                   function greetMe(yourName) { alert("Hello " + yourName); }
@@ -113,6 +126,7 @@
                error fugiat corporis ipsam corrupti, iusto repellendus minima aspernatur! Nostrum doloribus incidunt
                modi quisquam reiciendis!
             </p>
+            <br>
          </section>
          </section>
       </div>
