--- a/Technical Documentation Page.html
+++ b/Technical Documentation Page.html
@@ -9,127 +9,137 @@
    </head>
    <body>
       <div class="left_side">
-      <div class="header_text">
-         <p class="jsDocumentation">JS Documentation</p>
+         <div class="header_text">
+            <p class="jsDocumentation">JS Documentation</p>
+         </div>
+         <div class="navLinks">
+            <hr class="HrNav">
+            <nav id="navbar">
+               <a href="#Introduction">Introduction</a>
+               <hr class="HrNav">
+               <a href="#What_you_should_already_know">What you should already now</a>
+               <hr class="HrNav">
+               <a href="#Javascript_and_java">JavaScript and Java</a>
+               <hr class="HrNav">
+               <a href="#Hello_world">Hello world</a>
+               <hr class="HrNav">
+               <a href="#Variables">Variables</a>
+               <hr class="HrNav">
+               <a href="#Reference">Reference</a>
+               <hr class="HrNav">
+            </nav>
+         </div>
       </div>
-      <div class="navLinks">
-         <hr class="HrNav">
-         <nav id="navbar">
-         <a href="#Introduction">Introduction</a>
-         <hr class="HrNav">
-         <a href="#What_you_should_already_know">What you should already now</a>
-         <hr class="HrNav">
-         <a href="#Javascript_and_java">JavaScript and Java</a>
-         <hr class="HrNav">
-         <a href="#Hello_world">Hello world</a>
-         <hr class="HrNav">
-         <a href="#Variables">Variables</a>
-         <hr class="HrNav">
-      </nav>
-   </div>
-</div>
       <div class="right_side">
-      <div id="main-doc">
-         <section class="main-section">
-            <section id="Introduction">
-            <h2>Introduction </h2>
-            <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight
-               language. Inside a host environment (for example, a web browser), JavaScript can be connected to the
-               objects of its environment to provide programmatic control over them.</p>
-               <br>
-
-               <p>JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of
-               language elements such as operators, control structures, and statements. Core JavaScript can be extended
-               for a variety of purposes by supplementing it with additional objects; for example:
-            </p>
-            <br>
-            <ul>
-               <li>Client-side JavaScript extends the core language by supplying objects to control a browser and its
-                  Document Object Model (DOM). For example, client-side extensions allow an application to place
-                  elements on an HTML form and respond to user events such as mouse clicks, form input, and page
-                  navigation.
-               </li>
-               <br>
-               <li>Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript
-                  on a server. For example, server-side extensions allow an application to communicate with a
-                  database, provide continuity of information from one invocation to another of the application, or
-                  perform file manipulations on a server.
-               </li>
-            </ul>
-         </section>
-      </section>
-         <section class="main-section">
-            <section id="What_you_should_already_know">
-            <h2>What you should already know</h2>
-            <p>This guide assumes you have the following basic background:</p>
-            <br>
-            <ul>
-               <li>A general understanding of the Internet and the World Wide Web (WWW).
-               </li>
-               <br>
-               <li>Good working knowledge of HyperText Markup Language (HTML).
-               </li>
-               <br>
-               <li>Some programming experience. If you are new to programming, try one of the tutorials linked on the
-                  main page about JavaScript.
-               </li>
-               <br>
-            </ul>
-         </section>
-         </section>
-         <section class="main-section">
-            <section id="Javascript_and_java">
-            <h2>JavaScript and Java</h2>
-            <p>JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript
-               language resembles Java but does not have Java's static typing and strong type checking. JavaScript
-               follows most Java expression syntax, naming conventions and basic control-flow constructs which was the
-               reason why it was renamed from LiveScript to JavaScript.
-            </p>
-            <br>
-            <p>In contrast to Java's compile-time system of classes built by declarations, JavaScript supports a runtime
-               system based on a small number of data types representing numeric, Boolean, and string values.
-               JavaScript has a prototype-based object model instead of the more common class-based object model. The
-               prototype-based model provides dynamic inheritance; that is, what is inherited can vary for individual
-               objects. JavaScript also supports functions without any special declarative requirements. Functions can
-               be properties of objects, executing as loosely typed methods.
-            </p>
-            <br>
-            <p>JavaScript is a very free-form language compared to Java. You do not have to declare all variables,
-               classes, and methods. You do not have to be concerned with whether methods are public, private, or
-               protected, and you do not have to implement interfaces. Variables, parameters, and function return types
-               are not explicitly typed.
-            </p>
-            
-         </section>
-         </section>
-         <section class="main-section">
-            <section id="Hello_world">
-            <h2>Hello world</h2>
-            <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript
-               code:
-            </p>
-            <br>
-            <div class="jsCode">
-               <p>
-                  function greetMe(yourName) { alert("Hello " + yourName); }
-               </p>
-               <p>
-                  greetMe("World");
-               </p>
-            </div>
-         </section>
-         </section>
-         <section class="main-section">
-            <section id="Variables">
-            <h2>Variables</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates a nisi quaerat quam quia, animi
-               error fugiat corporis ipsam corrupti, iusto repellendus minima aspernatur! Nostrum doloribus incidunt
-               modi quisquam reiciendis!
-            </p>
-            <br>
-         </section>
-         </section>
+         <div id="main-doc">
+            <section class="main-section">
+               <section id="Introduction">
+                  <h2>Introduction </h2>
+                  <p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight
+                     language. Inside a host environment (for example, a web browser), JavaScript can be connected to the
+                     objects of its environment to provide programmatic control over them.
+                  </p>
+                  <br>
+                  <p>JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of
+                     language elements such as operators, control structures, and statements. Core JavaScript can be extended
+                     for a variety of purposes by supplementing it with additional objects; for example:
+                  </p>
+                  <br>
+                  <ul>
+                     <li>Client-side JavaScript extends the core language by supplying objects to control a browser and its
+                        Document Object Model (DOM). For example, client-side extensions allow an application to place
+                        elements on an HTML form and respond to user events such as mouse clicks, form input, and page
+                        navigation.
+                     </li>
+                     <br>
+                     <li>Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript
+                        on a server. For example, server-side extensions allow an application to communicate with a
+                        database, provide continuity of information from one invocation to another of the application, or
+                        perform file manipulations on a server.
+                     </li>
+                  </ul>
+               </section>
+            </section>
+            <section class="main-section">
+               <section id="What_you_should_already_know">
+                  <h2>What you should already know</h2>
+                  <p>This guide assumes you have the following basic background:</p>
+                  <br>
+                  <ul>
+                     <li>A general understanding of the Internet and the World Wide Web (WWW).
+                     </li>
+                     <br>
+                     <li>Good working knowledge of HyperText Markup Language (HTML).
+                     </li>
+                     <br>
+                     <li>Some programming experience. If you are new to programming, try one of the tutorials linked on the
+                        main page about JavaScript.
+                     </li>
+                     <br>
+                  </ul>
+               </section>
+            </section>
+            <section class="main-section">
+               <section id="Javascript_and_java">
+                  <h2>JavaScript and Java</h2>
+                  <p>JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript
+                     language resembles Java but does not have Java's static typing and strong type checking. JavaScript
+                     follows most Java expression syntax, naming conventions and basic control-flow constructs which was the
+                     reason why it was renamed from LiveScript to JavaScript.
+                  </p>
+                  <br>
+                  <p>In contrast to Java's compile-time system of classes built by declarations, JavaScript supports a runtime
+                     system based on a small number of data types representing numeric, Boolean, and string values.
+                     JavaScript has a prototype-based object model instead of the more common class-based object model. The
+                     prototype-based model provides dynamic inheritance; that is, what is inherited can vary for individual
+                     objects. JavaScript also supports functions without any special declarative requirements. Functions can
+                     be properties of objects, executing as loosely typed methods.
+                  </p>
+                  <br>
+                  <p>JavaScript is a very free-form language compared to Java. You do not have to declare all variables,
+                     classes, and methods. You do not have to be concerned with whether methods are public, private, or
+                     protected, and you do not have to implement interfaces. Variables, parameters, and function return types
+                     are not explicitly typed.
+                  </p>
+               </section>
+            </section>
+            <section class="main-section">
+               <section id="Hello_world">
+                  <h2>Hello world</h2>
+                  <p>To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript
+                     code:
+                  </p>
+                  <br>
+                  <div class="jsCode">
+                     <p>
+                        function greetMe(yourName) { alert("Hello " + yourName); }
+                     </p>
+                     <p>
+                        greetMe("World");
+                     </p>
+                  </div>
+               </section>
+            </section>
+            <section class="main-section">
+               <section id="Variables">
+                  <h2>Variables</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates a nisi quaerat quam quia, animi
+                     error fugiat corporis ipsam corrupti, iusto repellendus minima aspernatur! Nostrum doloribus incidunt
+                     modi quisquam reiciendis!
+                  </p>
+                  <br>
+               </section>
+            </section>
+            <section class="main-section">
+               <section id="Reference">
+                  <h2>Reference</h2>
+                  <ul>
+                  <li>All the documentation in this page is taken from <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" target="_blank">MDN</a>
+                  </li>
+                  <br>
+               </section>
+            </section>
+         </div>
       </div>
-   </div>
    </body>
 </html>
