Fixing hr class

--- a/Technical Documentation Page.html
+++ b/Technical Documentation Page.html
@@ -19,9 +19,11 @@
                <hr class="HrNav">
                <a href="#What_you_should_already_know">What you should already now</a>
                <hr class="HrNav">
+               <hr class="HrNav">
                <a href="#Javascript_and_java">JavaScript and Java</a>
                <hr class="HrNav">
                <a href="#Hello_world">Hello world</a>
+               <hr class="HrNav">
                <hr class="HrNav">
                <a href="#Variables">Variables</a>
                <hr class="HrNav">
